# Proyecto-NPRs

./: CMakeLists.txt  Proyecto final.docx  README.md  README.txt
assimplib/: assimp-vc143-mtd.lib
data/Bird/: rapid.mtl
data/Buzz/: Buzz.mtl
data/Shrek/Shrek/: Shrek.mtl
data/Tai Lung/: Tailung.mtl
include/: GpO.h
src/: GPO_aux.cpp  GPO_proyecto_final.cpp
